[project]
name = "nonebot-plugin-jmcomic"
version = "0.1.0"
description = "下载禁漫本子并发送"
authors = [
    {name = "zhulinyv",email = "zhulinyv2005@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
